# kpii

./: .gitignore  .pylintrc  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/examples/: advanced.md  basic.md
docs/getting-started/: installation.md  usage.md
kpii/: __init__.py  detector.py
tests/: test_detector.py
